add end game button; render the pieces

--- a/app.json
+++ b/app.json
@@ -1,4 +1,7 @@
 {
   "name": "backgammon",
-  "displayName": "backgammon"
+  "displayName": "backgammon",
+  "expo": {
+    "orientation": "landscape"
+  }
 }
