--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.83.1",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-safe-area-context": "^5.5.2",
+    "react-native-sound": "^0.13.0",
     "react-native-svg": "^15.15.1",
     "react-native-vector-icons": "^10.3.0",
     "zustand": "^5.0.10"
