--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-gesture-handler": "^2.30.0",
+    "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-sound": "^0.13.0",
     "react-native-svg": "^15.15.1",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.7.2",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
@@ -30,15 +32,13 @@
     "@react-native/babel-preset": "0.83.1",
     "@react-native/eslint-config": "0.83.1",
     "@react-native/metro-config": "0.83.1",
-    "@react-native/typescript-config": "0.83.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.2.0",
-    "typescript": "^5.8.3"
+    "react-test-renderer": "19.2.0"
   },
   "engines": {
     "node": ">=20"
