--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.83.1",
+    "metro": "^0.83.3",
+    "metro-config": "^0.83.3",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-gesture-handler": "^2.30.0",
