--- a/ios/backgammon/Info.plist
+++ b/ios/backgammon/Info.plist
@@ -50,5 +50,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+    <array>
+      <string>FontAwesome5_Brands.ttf</string>
+      <string>FontAwesome5_Regular.ttf</string>
+      <string>FontAwesome5_Solid.ttf</string>
+      <string>MaterialIcons.ttf</string>
+    </array>
 </dict>
 </plist>
